# anvil-wallet

./: .gitignore  CLAUDE.md  Cargo.toml  FOR-Mohit-anvil-wallet.md  FOR-Mohit-crypto-wallet.md  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
build-scripts/: build-ios.sh  build-sim.sh  extract-spki-pins.sh  inject-binary-hash.sh  verify-release-blockers.sh
crates/chain-btc/: Cargo.toml
crates/chain-btc/src/: address.rs  error.rs  lib.rs  network.rs  transaction.rs  utxo.rs
crates/chain-eth/: Cargo.toml
crates/chain-eth/src/: abi.rs  address.rs  chains.rs  erc20.rs  error.rs  lib.rs  transaction.rs
crates/chain-sol/: Cargo.toml
crates/chain-sol/src/: address.rs  error.rs  lib.rs  spl_token.rs  transaction.rs
crates/chain-zec/: Cargo.toml
crates/chain-zec/src/: address.rs  error.rs  lib.rs  transaction.rs
crates/crypto-utils/: Cargo.toml
crates/crypto-utils/src/: encryption.rs  error.rs  kdf.rs  lib.rs  random.rs  zeroizing.rs
crates/wallet-core/: Cargo.toml  build.rs
crates/wallet-core/src/: address.rs  error.rs  ffi_btc.rs  ffi_eth.rs  ffi_sol.rs  ffi_zec.rs  hd_derivation.rs  lib.rs  mnemonic.rs  seed_encryption.rs  types.rs  wallet_core.udl
crates/wallet-core/tests/: full_pipeline.rs
docs/: APP_STORE_NOTES.md  ARCHITECTURE.md  SECURITY.md
ios/: Secrets.xcconfig.example  project.yml
ios/AnvilWallet.xcodeproj/: project.pbxproj
ios/AnvilWallet/App/: AnvilWalletApp.swift  LaunchScreen.swift
ios/AnvilWallet/Components/: BalanceChangePreviewView.swift  LockScreenView.swift  PriceChartView.swift  RiskBannerView.swift  TokenIconView.swift
ios/AnvilWallet/Extensions/: Base58.swift  Color+Theme.swift  View+Extensions.swift
ios/AnvilWallet/Features/Activity/: ActivityView.swift  TransactionDetailView.swift
ios/AnvilWallet/Features/Bridge/: BridgeView.swift
ios/AnvilWallet/Features/Buy/: BuyView.swift  MoonPayWebView.swift
ios/AnvilWallet/Features/DApps/: DAppBrowserView.swift  DAppsView.swift  SessionApproveView.swift  SignRequestView.swift
ios/AnvilWallet/Features/Onboarding/: BackupMnemonicView.swift  CreateWalletView.swift  ImportWalletView.swift  SetPasswordView.swift  VerifyMnemonicView.swift  WelcomeView.swift
ios/AnvilWallet/Features/Send/: ConfirmTransactionView.swift  SendView.swift  TransactionResultView.swift
ios/AnvilWallet/Features/Settings/: AccountManagerView.swift  AddressBookView.swift  ApprovalTrackerView.swift  BackupSettingsView.swift  (+7 more)
ios/AnvilWallet/Models/: AutoLockInterval.swift  ChainModel.swift  NFTModel.swift  TokenModel.swift  TransactionModel.swift  WalletModel.swift
ios/AnvilWallet/Navigation/: AppRouter.swift  TabBarView.swift
ios/AnvilWallet/Resources/: PhishingBlocklist.json
ios/AnvilWallet/Security/: AntiDebugger.swift  AppIntegrityChecker.swift  JailbreakDetector.swift  ScreenshotProtection.swift  SecurityBootstrap.swift
ios/AnvilWallet/Services/: AddressBookService.swift  ApprovalService.swift  BalanceChangeSimulator.swift  BalanceService.swift  BridgeService.swift  CertificatePinner.swift  ChainPreferencesStore.swift  CustomRPCStore.swift  EtherscanService.swift  HapticService.swift  KeychainService.swift  ManualTokenService.swift  NFTService.swift  NotificationService.swift  PriceHistoryService.swift  PriceService.swift  RPCService.swift  SecureEnclaveService.swift  SecurityService.swift  SessionLockManager.swift  StakingService.swift  SwapService.swift  TokenDiscoveryService.swift  TransactionHistoryService.swift  TransactionRiskEngine.swift  TransactionSimulator.swift  WalletConnectService.swift  WalletService.swift  WatchAddressService.swift  WidgetDataProvider.swift
ios/AnvilWalletTests/: AddressBookServiceTests.swift  BalanceChangeSimulatorTests.swift  Base58Tests.swift  BridgeServiceTests.swift  StakingServiceTests.swift  TokenDiscoveryServiceTests.swift  TransactionRiskEngineTests.swift
ios/AnvilWalletWidget/: AnvilWalletWidget.swift  PortfolioEntry.swift  PortfolioProvider.swift  PortfolioWidget.swift  PortfolioWidgetView.swift  WidgetData.swift
ios/CryptoWallet/App/: ContentView.swift  CryptoWalletApp.swift
ios/CryptoWallet/Models/: TransactionModel.swift
ios/CryptoWallet/Navigation/: TabBarView.swift
ios/CryptoWallet/Security/: ClipboardManager.swift  JailbreakDetector.swift
ios/CryptoWallet/Services/: BiometricService.swift  PriceService.swift  RPCService.swift  TransactionSimulator.swift
tools/uniffi-bindgen/: Cargo.toml
website/: FOR-Mohit-anvil-wallet-website.md  index.html  privacy.html  terms.html
(+25 files in other folders)
