[workspace]
members = [
    "crates/crypto-utils",
    "crates/wallet-core",
    "crates/chain-btc",
    "crates/chain-eth",
    "crates/chain-sol",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.92.0"
license = "MIT"

[workspace.dependencies]
# Crypto primitives
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"
hmac = "0.12"
hex = "0.4"
bs58 = { version = "0.5", features = ["check"] }

# Key management
bip39 = { version = "2.1", features = ["zeroize"] }
bip32 = { version = "0.5", features = ["secp256k1"] }

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"

# Security
zeroize = { version = "1.8", features = ["derive"] }
secrecy = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# FFI
uniffi = "0.28"

# Error handling
thiserror = "2"

# Ed25519 for Solana
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
curve25519-dalek = "4"

# Bitcoin
bitcoin = { version = "0.32", features = ["rand-std"] }

# Ethereum (granular alloy sub-crates only)
alloy-primitives = "1"
alloy-consensus = "1"
alloy-rlp = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
