[package]
name = "chain-eth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
k256 = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-rlp = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
