[package]
name = "crypto-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aes-gcm = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
